# bsign-mirror

./: .cvsignore  .gdbinit  LSM  Makefile.in  NOTES  README  TODO  aclocal.m4  bsign.1  bsign.cxx  bsign.h  bsign_check  bsign_hash  bsign_sign  bsign_verify  config.h.in  configure  configure.in  conversion.cxx  conversion.h  ds.cxx  ds.h  elf.cc  exec.cxx  exec.h  exitstatus.cxx  exitstatus.h  files.cxx  files.h  filewalk.cc  filewalk.h  main.cxx  options.cxx  options.h  sha1.c  sha1.h  signal.cc  standard.h  tty.cxx  tty.h  (+2 more)
debian/: changelog  control  copyright  rules
