dnl Process this file with autoconf to produce a configure script.
AC_REVISION([$Id: configure.in,v 1.5 2002/01/18 01:16:44 elf Exp $])
AC_PREREQ(2.10)dnl              dnl Minimum Autoconf version required.
AC_INIT(bsign.cxx)

AC_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS		dnl Default to c++ cause that what we done.

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL

CFLAGS=-g
CXXFLAGS=-g

if test "${GXX}" = "yes" ; then 
 CFLAGS_W=" -Wall -Wno-parentheses -Wno-unused" 
 CFLAGS="${CFLAGS}"
fi

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_FUNCS(strncasecmp memcpy bcopy strcspn strncpy cfmakeraw)
AC_CHECK_FUNCS(vsnprintf vsprintf rindex strrchr)
AC_CHECK_HEADERS(fcntl.h unistd.h gpm.h malloc.h string.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl -- Removed because it is a bother
dnl AC_C_CONST
dnl -- Removed because it is a bother
dnl AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_STRUCT_TIMEZONE
AC_CHECK_SIZEOF(long, 4)			dnl -- Make sure to warn user
AC_CHECK_SIZEOF(int, 4)				dnl --   about these defaults.
AC_CHECK_SIZEOF(long long, 8)			dnl --   about these defaults.
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_FUNC_MMAP
AC_FUNC_VPRINTF					dnl -- We use vsprintf

AC_SUBST(CFLAGS_W)
AC_OUTPUT(Makefile)

chmod -w Makefile
chmod -w config.h

dnl -- Create empty dependency file so that Make can include it
if test ! -f depend.m ; then touch depend.m ; fi

echo
echo "Run 'make' to build the application."
echo
